# youtube-chat-overlay

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  settings.css  settings.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: css_template.rs  main.rs
src-tauri/templates/: chat_style.css.tera  css_injection.js.tera
